--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <a href="login.html" class="logear">Logear</a>
 
     <h1>CASTRO GYM</h1>
-
+<br><br>
+    <label for="nombre">INGRESE DNI:</label>
+    <input type="text" id="nombre" name="nombre" required>
     <hr class="linea">
 
     <nav class="menu">
