--- a/index.html
+++ b/index.html
@@ -1,23 +1,35 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <title>CASTROGYM</title>
-    <link rel="stylesheet" href="estilo.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Registro de Usuarios - Gym</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div class="container">
+    <h1>Registro de Usuarios - Gym</h1>
+    <form>
+      <label for="nombre">Nombre completo:</label>
+      <input type="text" id="nombre" name="nombre" required>
 
-    <a href="login.html" class="logear">Logear</a>
+      <label for="email">Correo electrónico:</label>
+      <input type="email" id="email" name="email" required>
 
-    <h1>CASTRO GYM</h1>
-<br><br>
-    <label for="nombre">INGRESE DNI:</label>
-    <input type="text" id="nombre" name="nombre" required>
-    <hr class="linea">
-    </nav>
-    <hr class="linea">
-    </div>
+      <label for="telefono">Teléfono:</label>
+      <input type="tel" id="telefono" name="telefono">
 
+      <label for="plan">Plan:</label>
+      <select id="plan" name="plan">
+        <option value="basico">Básico</option>
+        <option value="intermedio">Intermedio</option>
+        <option value="premium">Premium</option>
+      </select>
+
+      <button type="submit">Registrar</button>
+    </form>
+  </div>
 </body>
 </html>
+
 
