--- a/vistafrabri.html
+++ b/vistafrabri.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <h1>CASTRO GYM</h1>
-    <a href="registrarnuevousuario.html" class="logear">REGISTRAR NUEVO USUARIO</a>
+    <a href="registrarnuevousuario.html" class="boton">REGISTRAR NUEVO USUARIO</a>
     <br>
-    <a href="pago.html" class="logear">REGISTRAR PAGO</a>
+    <a href="pago.html" class="boton">REGISTRAR PAGO</a>
     <br>
-    <a href="editarusuario.html" class="logear">EDITAR USUARIO</a>
+    <a href="editarusuario.html" class="boton">EDITAR USUARIO</a>
 
 <br><br>
     <hr class="linea">
