--- a/vistafrabri.html
+++ b/vistafrabri.html
@@ -7,11 +7,13 @@
 </head>
 <body>
     <h1>CASTRO GYM</h1>
-    <a href="registrarnuevousuario.html" class="boton">REGISTRAR NUEVO USUARIO</a>
+    <a href="registro.html" class="boton">REGISTRAR NUEVO USUARIO</a>
     <br>
     <a href="pago.html" class="boton">REGISTRAR PAGO</a>
     <br>
     <a href="editarusuario.html" class="boton">EDITAR USUARIO</a>
+    <br>
+    <a href="listausuarios.html" class="boton">VER TODOS LOS USUARIOS </a>
 
 <br><br>
     <hr class="linea">
