--- a/registro.html
+++ b/registro.html
@@ -8,6 +8,9 @@
 </head>
 <body>
   <div class="container">
+    <!-- Logo centrado -->
+    <img src="imagenes/logo.png" alt="Logo Gym" class="logo">
+
     <h1>Registro de Usuarios - Gym</h1>
     <form>
       <label for="nombre">Nombre completo:</label>
@@ -31,5 +34,3 @@
   </div>
 </body>
 </html>
-
-
