--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+        <!-- Logo centrado -->
+    <img src="imagenes/logo.png" alt="Logo Gym" class="logo">
+
     <h1>CASTRO GYM</h1>
     <a href="vistafabri.html" class="logear">logear</a>
     <br>
