--- a/registro.html
+++ b/registro.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <!-- Logo centrado -->
-    <img src="imagenes>/logo.png" alt="Logo Gym" class="logo">
+    <img src="imagenes/logo.png" alt="Logo Gym" class="logo">
 
     <h1>Registro de Usuarios - Gym</h1>
     <form>
