--- a/vistafabri.html
+++ b/vistafabri.html
@@ -5,16 +5,15 @@
     <title>CASTROGYM</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+<h1>CASTRO GYM</h1>
 <body>
-    <h1>CASTRO GYM</h1>
+    <img src="imagenes/logo.png" alt="Logo Gym" class="logo">
+    <div class="menu">
     <a href="registro.html" class="boton">REGISTRAR NUEVO USUARIO</a>
-    <br>
     <a href="pago.html" class="boton">REGISTRAR PAGO</a>
-    <br>
     <a href="editarusuario.html" class="boton">EDITAR USUARIO</a>
-    <br>
-    <a href="listausuarios.html" class="boton">VER TODOS LOS USUARIOS </a>
-
+    <a href="listausuarios.html" class="boton">VER TODOS LOS USUARIOS</a>
+  </div>
 <br><br>
     <hr class="linea">
     </div>
