--- a/vistafabri.html
+++ b/vistafabri.html
@@ -13,6 +13,8 @@
     <a href="pago.html" class="boton">REGISTRAR PAGO</a>
     <a href="editarusuario.html" class="boton">EDITAR USUARIO</a>
     <a href="listausuarios.html" class="boton">VER TODOS LOS USUARIOS</a>
+    <a href="cerdadepagos.html" class="boton">PENDIETES DE PAGO</a>
+    <a href="vencidos.html" class="boton">VENCIDOS</a>
   </div>
 <br><br>
     <hr class="linea">
