--- a/vistafabri.html
+++ b/vistafabri.html
@@ -7,14 +7,14 @@
 </head>
 
 <body>
-    <img src="imagenes/logo.png" alt="Logo Gym" class="logo">
-    <div class="menu">
+  <img src="imagenes/logo.png" alt="Logo Gym" class="logo">
+  <div class="menu">
     <a href="registro.html" class="boton">REGISTRAR NUEVO USUARIO</a>
     <a href="pago.html" class="boton">REGISTRAR PAGO</a>
     <a href="editarusuario.html" class="boton">EDITAR USUARIO</a>
     <a href="listausuarios.html" class="boton">VER TODOS LOS USUARIOS</a>
-    <a href="cerdadepagos.html" class="boton">CERCA DE VENCERSE</a>
-    <a href="vencidos.html" class="boton">VENCIDOS</a>
+    <a href="cerdadepagos.html" class="boton peligro">CERCA DE VENCERSE</a>
+    <a href="vencidos.html" class="boton peligro">VENCIDOS</a>
   </div>
 <br><br>
     <hr class="linea">
