--- a/index.html
+++ b/index.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <title>CASTROGYM</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ingreso DNI</title>
+  <link rel="stylesheet" href="indx.css">
 </head>
 <body>
-        <!-- Logo centrado -->
-    <img src="imagenes/logo.png" alt="Logo Gym" class="logo">
+  <!-- Logo -->
+  <img src="imagenes/logo.png" alt="Logo" class="logo">
 
-    <h1>CASTRO GYM</h1>
-    <a href="vistafabri.html" class="logear">logear</a>
-    <br>
-    <label for="nombre">INGRESE DNI:</label>
-    <input type="text" id="nombre" name="nombre" required>
-    <hr class="linea">
-
-<br><br>
-    <hr class="linea">
-    </div>
-
+  <!-- Formulario -->
+  <div class="form-container">
+    <form>
+      <label for="dni">Ingrese DNI:</label>
+      <input type="text" id="dni" name="dni" placeholder="Ej: 12345678" required>
+      <button type="submit">Aceptar</button>
+    </form>
+  </div>
 </body>
 </html>
