--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
       <button type="submit">Aceptar</button>
     </form>
   </div>
+  <a href="loginfabri.html" class="logear">logear</a>
 </body>
 </html>
