--- a/loginfabri.html
+++ b/loginfabri.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>LOGIN CASTRO GYM</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <a href="index.html" class="artelibre">
+    <h1>CASTRO GYM</h1>
+  </a>
+  <br>
+  <img src="imagenes/logo.png" alt="Logo Gym" class="logo">
+  <div class="logincontenedor">
+    <label for="usuario">INGRESE CORREO ELECTRONICO</label><br>
+    <input type="text" id="usuario" name="usuario" required><br><br>
+    
+    <label for="clave">INGRESE CONTRASEÑA</label><br>
+    <input type="password" id="clave" name="clave"><br><br>
+    
+  </div>
+  <a href="vistafabri.html" class="logear">ver vista fabri</a>
+  
+  <hr class="linea">
 
+  <!-- 👉 Importamos la lógica aparte -->
+  <script type="module" src="scripts/login.js"></script>
+</body>
+</html>
