--- a/loginfabri.html
+++ b/loginfabri.html
@@ -16,7 +16,9 @@
     <input type="text" id="usuario" name="usuario" required><br><br>
     
     <label for="clave">INGRESE CONTRASEÑA</label><br>
-    <input type="password" id="clave" name="clave"><br><br>
+    <input type="password" id="clave" name="clave">
+     <button id="btnLogin" class="iniciar-sesion">Iniciar Sesión</button>
+    <br><br><br><br>
     
   </div>
   <a href="vistafabri.html" class="logear">ver vista fabri</a>
