--- a/registro.html
+++ b/registro.html
@@ -11,24 +11,33 @@
     <!-- Logo centrado -->
     <img src="imagenes/logo.png" alt="Logo Gym" class="logo">
 
-    <h1>Registro de Usuarios - Gym</h1>
+    <h1>Registro de Usuarios</h1>
     <form>
+      <label for="Dni">DNI(sin puntos):</label>
+      <input type="number" id="Dni" name="Dni" required>
       <label for="nombre">Nombre completo:</label>
       <input type="text" id="nombre" name="nombre" required>
 
-      <label for="email">Correo electrónico:</label>
+      <label for="email">Correo electrónico(opcional):</label>
       <input type="email" id="email" name="email" required>
-
+    
       <label for="telefono">Teléfono:</label>
       <input type="tel" id="telefono" name="telefono">
-
-      <label for="plan">Plan:</label>
-      <select id="plan" name="plan">
-        <option value="basico">Básico</option>
-        <option value="intermedio">Intermedio</option>
+      <label for="sexo">SEXO:</label> 
+      <select id="sexo " name="sexo">
+        <option value="Masculino">Masculino</option>
+        <option value="Femenino">Femenino</option>
+        <option value="Otro">Sin especificar</option>
+      </select>
+      <label for="servicio">Servicio:</label>
+      <select id="servicio" name="servicio">
+        <option value="Musculacion">Musculacion</option>
+        <option value="Crossfit">Crossfit</option>
         <option value="premium">Premium</option>
       </select>
-
+      <label for="tiempo">Tiempo que pago:</label>
+      <input type="date" id="tiempo" name="tiempo" required>
+       
       <button type="submit">Registrar</button>
     </form>
   </div>
